# odimall

./: .gitignore  README.md  build-push.sh
api-gateway/: Dockerfile  pom.xml
cart-service/: Dockerfile  Gemfile  app.rb  config.ru
frontend/: Dockerfile  clickstack-entry.js  package-lock.json  package.json  rum-entry.js  server.js  tracing.js
frontend/public/: app.js  index.html  style.css
grafana/dashboards/: faro-browser-rum.json
helm/odimall/: Chart.yaml  values.yaml
inventory-service/: Dockerfile  go.mod  go.sum  main.go
k8s/: api-gateway.yaml  cart-service.yaml  deploy.sh  destroy.sh  frontend.yaml  inventory-service.yaml  kafka.yaml  load-generator.yaml  mysql-init-configmap.yaml  mysql.yaml  namespace.yaml  notification-service.yaml  order-service.yaml  payment-service.yaml  product-service.yaml  shipping-service.yaml  user-service.yaml
load-generator/: Dockerfile  go.mod  main.go
mysql-init/: init.sql
notification-service/: Dockerfile  go.mod  go.sum  main.go
order-service/: Dockerfile  pom.xml
payment-service/: Dockerfile  Program.cs
product-service/: Dockerfile  app.py  genai_tracing.py  langfuse_setup.py  requirements.txt
shipping-service/: CMakeLists.txt  Dockerfile  main.cpp
user-service/: Dockerfile  package-lock.json  package.json  server.js
vm-edge-services/: README.md  install-amzn2023.sh  setup-postgres-amzn2023.sh
vm-edge-services/cpp-alpha/: CMakeLists.txt  main.cpp
vm-edge-services/java/: pom.xml
windows-edge-service/: Program.cs  README.md  WindowsEdgeService.csproj  install-windows.ps1
(+47 files in other folders)
